testsuite/veronac/codegen/compile-fail/main-is-interface.verona
// Copyright Microsoft and Project Verona Contributors.
// SPDX-License-Identifier: MIT
// CHECK-L: main-is-interface.verona:${LINE:+1}:11: error: 'Main' must be a class
interface Main {
  main() { }
}
